--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://sakib-admin:sakib124000@cluster0.x55l3gi.mongodb.net/
+MONGO_URI=mongodb+srv://mirzashihab:MirzaMPI-test@cluster0.ftaq4.mongodb.net/MPItest
 PORT=5000
